            - Added a spaceship operator (<=>) for comparisons.
            - Deprecated the exponent-based constructors Laurent(exp) and
              Laurent2(xExp, yExp).
            - Renamed the exponent-based initialisers init(exp) and
              init(xExp, yExp) to initExp(exp) and initExp(xExp, yExp).
              The old names are kept but deprecated.
            - The std::initializer_list constructor for Laurent2 now throws an
              exception if the preconditions are violated.
        Class LensSpace:
            - Added a spaceship operator (<=>) for aesthetic comparisons, which
              also adds comparison operators (<, <=, >, >=) to this class.
        Class LightweightSequence<T>:
            - New constructor that takes a std::initializer_list.
            - New routines empty(), front(), and back().
            - Added a spaceship operator (<=>) for comparisons.  This has the
              effect of implementing all comparison operators, not just
              less-than (<) as before.
        Class Link:
            - Added initial support for virtual knots and links, with new
              routines isClassical(), virtualGenus(), makeVirtual(), graft(),
              oddWrithe(), arrow(), groups(), extendedGroup(), and
              extendedGroups().
            - New routine alexander() and class constant alexanderVar.
            - New routine makeAlternating().
            - New routine seifertCircles().
            - New routine whiteheadDouble().
            - New routines isConnected(), diagramComponents(),
              countDiagramComponents(), and diagramComponentIndices().
            - New routines insertLink() and moveContentsTo().
            - New routines countTrivialComponents() and pdAmbiguous(), to help
              understand the limitations of planar diagram codes.
            - New routine hash(), which uses the tight encoding.
            - New routines overForComponent() and underForComponent().